<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OriginalASO_2014_002</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="main_title">今日の一言</string>
    <string name="main_text1">ひとことを登録</string>
    <string name="main_button1">メンテ</string>
    <string name="main_button2">登録</string>
    <string name="main_button3">ひとことチェック</string>

    <string name="hitokoto_title">ひとことチェック</string>

    <string name="maintenance_title">メンテナンス画面</string>
    <string name="maintenance_button1">戻る</string>
    <string name="maintenance_button2">削除</string>
</resources>
