<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- タイトル -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="15pt"
        android:text="@string/maintenance_title" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/maintenance_list" />

    <!-- ボタン配置 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/maintenance_button1"
	        android:id="@+id/maintenance_btn1" />
	    <Button
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/maintenance_button2"
	        android:id="@+id/maintenance_btn2" />
    </LinearLayout>

</LinearLayout>
